# dl-mit

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  ReadMe.md
blue/: dense_layer.py  single_layer.py
blue-cpp/: .gitignore  CMakeLists.txt  ReadMe.md
blue-cpp/cmake/: dependencies.cmake
blue-cpp/cmake/python/: download_libtorch.py
blue-cpp/include/: Layer.ixx
blue-cpp/src/: CMakeLists.txt
blue-cpp/src/modules/layers/: Dense.ixx  Single.ixx
blue-cpp/src/tests/: mnist.cpp
blue/activation_functions/: activation_functions.py
blue/layers/: dense_layer.py  single_layer.py
notes/: .gitignore  CMakeLists.txt  build.sh  main.tex
src/DenseLayer/: dense_layer.py
